<resources>
    <string name="app_name">Endereços</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="diego_saouda_28scj_rm_31364">Diego Saouda (28SCJ - RM 31364)</string>
    <string name="title_activity_endereco">EnderecoActivity</string>
    <string name="cep">CEP</string>
    <string name="logradouro">Logradouro</string>
    <string name="complemento">Complemento</string>
    <string name="bairro">Bairro</string>
    <string name="uf">UF</string>
    <string name="salvar">Salvar</string>
    <string name="cidade">Cidade</string>
    <string name="sobre_via_cep">Sobre Via Cep</string>
    <string name="fechar">Fechar</string>
    <string name="titulo">Titulo</string>
    <string name="n_mero">Número</string>
    <string name="nenhum_endere_o_cadastrado">Nenhum endereço cadastrado</string>
</resources>
